<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022-2024 Universitat Politècnica de València
  ~ Authors: David de Andrés and Juan Carlos Ruiz
  ~          Fault-Tolerant Systems
  ~          Instituto ITACA
  ~          Universitat Politècnica de València
  ~
  ~ Distributed under MIT license
  ~ (See accompanying file LICENSE.txt)
  -->
<!--
  ~ Defines the navigation actions for each Fragment.
  ~ The starting Fragment is MoviesListFragment.
  -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/moviesListFragment">

    <fragment
        android:id="@+id/moviesListFragment"
        android:name="upv.dadm.ex18_materialdesign.ui.fragments.MoviesListFragment"
        android:label="@string/movies_list">
        <action
            android:id="@+id/actionShowMovieDetail"
            app:destination="@id/movieDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="upv.dadm.ex18_materialdesign.ui.fragments.MovieDetailFragment"
        android:label="@string/movie_detail" >
        <action
            android:id="@+id/actionAddComment"
            app:destination="@id/addCommentBottomSheet" />
    </fragment>
    <dialog
        android:id="@+id/addCommentBottomSheet"
        android:name="upv.dadm.ex18_materialdesign.ui.fragments.AddCommentBottomSheet"
        android:label="@string/add_comment" />
</navigation>