<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022-2024 Universitat Politècnica de València
  ~ Authors: David de Andrés and Juan Carlos Ruiz
  ~          Fault-Tolerant Systems
  ~          Instituto ITACA
  ~          Universitat Politècnica de València
  ~
  ~ Distributed under MIT license
  ~ (See accompanying file LICENSE.txt)
  -->
<!--FrameLayout styled and behaving as a standard (permanent) BottomSheet-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetFrameLayout"
    style="@style/Widget.Material3.BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    app:behavior_draggable="true"
    app:behavior_hideable="false"
    app:behavior_peekHeight="54dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Displays a handle to expand/collapse the BottomSheet-->
        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/dragHandle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvTitleBottomSheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margins"
            android:text="@string/filter_by_genre"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dragHandle" />

        <Button
            android:id="@+id/bSelectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_all"
            app:layout_constraintEnd_toStartOf="@id/bClearAll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleBottomSheet" />

        <Button
            android:id="@+id/bClearAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_all"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bSelectAll"
            app:layout_constraintTop_toBottomOf="@id/tvTitleBottomSheet" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins"
            android:layout_marginBottom="@dimen/margins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bSelectAll" />

        <!--Holds and keep the state of dynamically added Chips-->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margins"
            android:layout_marginEnd="@dimen/margins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:singleSelection="false" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
